--- a/styles.css
+++ b/styles.css
@@ -63,11 +63,12 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 32vw; 
+  font-size: 32vw;
   font-weight: bold;
   letter-spacing: 1vw;
   width: 100vw;
   color: #d8b4fe;
+  background: #D8B4FE;
   transition: color 0.3s ease;
   margin: 20px 0;
 }
@@ -86,11 +87,21 @@ h1 {
   color: white;
   border: none;
   border-radius: 5px;
-  }
+}
 
-  label[for="locationSelect"] {
-    font-size: 2.7rem;
-    color: #6b21a8;
-    margin-bottom: 8px; 
-    display: block;
-    }
+label[for="locationSelect"] {
+  font-size: 2.7rem;
+  color: #6b21a8;
+  margin-bottom: 8px; 
+  display: block;
+}
+
+span {
+  text-shadow:
+    -2px -2px 0 #D8B4FE,  
+     2px -2px 0 #D8B4FE,
+    -2px  2px 0 #D8B4FE,
+     2px  2px 0 #D8B4FE;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+}
